[workspace]
resolver = "2"
members = ["quizx", "pybindings"]
default-members = ["quizx"]

[workspace.dependencies]
quizx = { path = "./quizx" }
num = "0.4.3"
approx = "0.5.1"
itertools = "0.13.0"
ndarray = "0.16.1"
openqasm = "0.1.2"
pyo3 = { version = "0.22.3" }
rand = "0.8.3"
rayon = "1.5.0"
regex = "1.11.0"
rustc-hash = "2.0.0"
derive_more = "1.0.0"
rstest = "0.23.0"
serde = "1.0.210"
serde_json = "1.0.128"

[workspace.package]
version = "0.1.0"
authors = ["Aleks Kissinger <aleks0@gmail.com>"]
edition = "2021"
rust-version = "1.75"
homepage = "https://github.com/zxlang/quizx"
license-file = "LICENSE"
