[workspace]
resolver = "2"
members = ["quizx", "pybindings"]
default-members = ["quizx"]

[workspace.package]
authors = ["Aleks Kissinger <aleks0@gmail.com>"]
edition = "2021"
rust-version = "1.81"
homepage = "https://github.com/zxcalc/quizx"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
num = "0.4.3"
approx = "0.5.1"
itertools = "0.13.0"
ndarray = "0.16.1"
openqasm = "0.1.2"
pyo3 = { version = "0.24.2" }
rand = "0.8.3"
rayon = "1.5.0"
regex = "1.11.1"
rustc-hash = "2.1.1"
derive_more = "1.0.0"
rstest = "0.23.0"
serde = "1.0.218"
serde_json = "1.0.139"
tempfile = "3.20.0"
env_logger = "0.11.8"
log = "0.4.20"