[project]
name = "quizx"
description = "Quantum Circuit Optimisation and Compilation using the ZX-calculus"
version = "0.1.0"
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "pybindings/README.md"
authors = [{ name = "Aleks Kissinger", email = "aleks0@gmail.com" }]
maintainers = [
    { name = "Aleks Kissinger", email = "aleks0@gmail.com" },
    { name = "Agustin Borgna", email = "agustinborgna@gmail.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering",
]

dependencies = ["pyzx >=0.8.0,<0.9.0"]

[tool.uv]

dev-dependencies = [
    "pip >=24.2,<25",
    "maturin >=1.7.4,<2",
    "pytest >=8.3.3,<9",
    "ruff >=0.6.8,<1",
    "pre-commit >=3.8.0,<4",
    "mypy >=1.11.2,<2",
]

[build-system]
requires = ["maturin>=1.7.0"]
build-backend = "maturin"

[project.urls]
homepage = "https://github.com/zxlang/quizx"
repository = "https://github.com/zxlang/quizx"

[tool.maturin]
module-name = "quizx._quizx"
manifest-path = "pybindings/Cargo.toml"
python-source = "pybindings"
