[package]
name = "quizx_pybindings"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quizx"
crate-type = ["cdylib"]

[dependencies]
quizx = { workspace = true }
num = { workspace = true }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
