[package]
name = "quizx_pybindings"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }

[lib]
name = "libquizx"
crate-type = ["cdylib"]

[dependencies]
quizx = { workspace = true }
num = { workspace = true }
pyo3 = { workspace = true, features = [
    "extension-module",
    "num-complex",
    "abi3-py39",
] }
derive_more = { workspace = true, features = ["add", "mul"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
