[project]
name = "quizx"
description = "Quantum Circuit Optimisation and Compilation using the ZX-calculus"
version = "0.1.2"
requires-python = ">=3.9"
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "Aleks Kissinger", email = "aleks0@gmail.com" }]
maintainers = [
    { name = "Aleks Kissinger", email = "aleks0@gmail.com" },
    { name = "Agustin Borgna", email = "agustinborgna@gmail.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering",
]

dependencies = ["pyzx >=0.9.0,<0.10.0"]

[build-system]
requires = ["maturin>=1.7.0"]
build-backend = "maturin"

[project.urls]
homepage = "https://github.com/zxlang/quizx"
repository = "https://github.com/zxlang/quizx"

[tool.maturin]
module-name = "quizx"
manifest-path = "Cargo.toml"
