[package]
name = "quizx"
version = "0.2.0"
description = "Quantum Circuit Optimisation and Compilation using the ZX-calculus"
keywords = ["Quantum", "ZX-calculus", "Optimisation", "Compilation"]
categories = ["science"]

edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[dependencies]
log = "0.4.20"  # Version 0.4.20 is a stable and widely used version
num = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true, features = ["rayon"] }
approx = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
openqasm = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from"] }
tempfile = "3.20.0"
ordered-float = "5.0.0"
env_logger = "0.11.8"
num-rational = "0.4.2"

[dev-dependencies]
rstest = { workspace = true }
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "simplifier"
harness = false
