[package]
name = "quizx"
version = "0.2.0"
description = "Quantum Circuit Optimisation and Compilation using the ZX-calculus"
keywords = ["Quantum", "ZX-calculus", "Optimisation", "Compilation"]
categories = ["science"]

edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[dependencies]
num = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true, features = ["rayon"] }
approx = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
openqasm = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from"] }
clap = { version = "4.5.39", features = ["cargo", "derive"] }
tempfile = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
criterion = { version = "0.6.0", features = ["html_reports"] }
assert_cmd = "2.0.17"
predicates = "3.1.3"

[[bench]]
name = "basics"
harness = false

[[bench]]
name = "simplifier"
harness = false

[[bench]]
name = "decomposer"
harness = false
